--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,99 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  margin: 0 auto;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+  min-height: unset;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+min-width: 324px;
+min-height: 500px;
+}
+.navigation-bar {
+  padding: 0;
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.tab{
+  padding: 10px 30px;
+ 
+}
+.tab{
+  cursor: pointer;
+  font-weight: 500;
+  border-bottom: 2px solid #e8e8e8;
 }
 
-.card {
-  padding: 2em;
+.tab.active{
+  border-bottom-color: #0084f5;
 }
 
-.read-the-docs {
-  color: #888;
+.add-btn{
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  font-weight: 500;
+  background-color: #0084f5;
+  border: none;
+}
+
+.add-btn:hover{
+  background-color: rgba(0, 132, 245, 0.8);
+}
+
+input {
+  padding: 10px;
+  border-radius: 10px;
+  outline: none;
+  flex: 1;
+  border: 2px solid #e8e8e8;
+}
+
+.todo-table{
+  list-style: none;
+  padding: 0;
+}
+
+.todo-control{
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.todo-item{
+  padding: 4px 8px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.todo-item.completed{
+  text-decoration: line-through;
+}
+
+.todo-control-btn{
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.todo-control-btn:hover {
+  opacity: 0.8;
+}
+
+.delete-all-btn{
+  padding: 10px 20px;
+  border-radius: 6px;
+  color: #fff;
+  font-weight: 500;
+  background-color: #ff3041;
+  float: right;
+  border: none;
+}
+
+.delete-all-btn:hover{
+  background-color: rgba(255,48,65, 0.8);
+  border: none
 }
